--- a/style.css
+++ b/style.css
@@ -76,17 +76,72 @@ body > div {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     background-color: white;
     padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 .mid h2 {
     letter-spacing: 2px;
+    font-size: 2.2rem;
 }
 
 .form-row {
     display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .form-col {
     display: flex;
     flex-direction: column;
 }
+
+input {
+    padding: 10px;
+    width: 250px;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    outline-style: none;
+    box-shadow: none;
+    border-color: transparent;
+}
+
+label {
+    font-size: 1.4rem;
+    color: rgb(116, 116, 116);
+}
+
+input:focus {
+    outline: none !important;
+    border: 2px solid rgb(0, 183, 255);
+}
+
+
+/* :not(:focus):valid or invalid does effect after leaving focus*/
+input:not(:focus):valid {
+    border: rgb(4, 228, 4) 1px solid;
+    background-color: rgba(207, 253, 207, 0.705);
+}
+
+input:not(:focus):invalid {
+    outline: red 1px solid;
+    background-color: rgba(255, 180, 180, 0.315);
+}
+
+
+
+.btn {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #3F5F75ff;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 300;
+    width: 150px;
+}
+
