--- a/style.css
+++ b/style.css
@@ -1,147 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
-body {
-    font-family: 'Cinzel', serif;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    padding: 0;
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+:root {
+    --black: black;
+    --green: #D2FF00;
+    --grey: #22262E;
+
 }
 
-body > div {
-}
-
-.image-column {
-    flex: 1 1;
-    background-image: url(./img/cn-tower.jpg);
+html, body{
+    box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
+    background-image: url('./img/alexandre-st-louis-8gQ3awNLDOY-unsplash.jpg'); 
     background-repeat: no-repeat;
     background-size: cover;
-    width: max(35vw, 40vw);
+    height: 100vh;
 }
 
-.form-column {
-    flex: 2 1 65%;
+*, *::before, *::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
-.logo {
-    margin-top: 250px;
-    background-color: rgba(0, 0, 0, 0.451);
-    height: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* Heading */
+.heading {
+    display: grid;
+    place-content: center;
+    text-align: center;
+    background-color: var(--black);
+    padding: 2rem;
 }
 
-.pray {
-    filter: invert(1);
-    transform: rotate(-20deg);
-    width: max(200px, 10px);
-}
-
-.logo h2 {
+.font {
     color: white;
-    letter-spacing: 2px;
-    font-size: clamp(2.5vw, 1rem, 1vw);
-    white-space: nowrap;
 }
 
-.logo > {
-    flex: 1 1 auto;
-}
-
-/* FORM SECTION */
-.form-column {
-    width: max(65vw, 60vw);
+/* Form */
+#form {
     display: flex;
     flex-direction: column;
-    background-color: #F9FAFB;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    margin: 4vw;
+    background: rgba(0, 0, 0, 0.89);
+    padding: 3vw;
     
-}
-
-.form-column > div{
-    flex: 1;
-}
-
-.top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.top h2 {
-    letter-spacing: 2px;
-}
-
-.mid {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: white;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-}
-
-.mid h2 {
-    letter-spacing: 2px;
-    font-size: 2.2rem;
 }
 
 .form-row {
     display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
+    flex-direction: column;
+    gap: 5px;
 }
 
-.form-col {
-    display: flex;
-    flex-direction: column;
+.error {
+    color: red;
+    font-weight: 900;
+    font-size: 14px;
+}
+
+.errorIN {
+    outline: 2px red solid;
+}
+
+label, input {
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 700;
 }
 
 input {
-    padding: 10px;
-    width: 250px;
-    outline: none;
-    border-radius: 5px;
-    font-size: 1rem;
-    outline-style: none;
-    box-shadow: none;
-    border-color: transparent;
+    color: black;
 }
 
-label {
-    font-size: 1.4rem;
-    color: rgb(116, 116, 116);
+label[class="req"]::after {
+    content: " *";
+    color: red;
+}   
+
+label[ for='mName']::after {
+    content: ' (optional)';
+    color: rgb(255, 255, 255);
+    font-size: 1rem;
+    opacity: .9;
+}
+
+input {
+    border: none;
+    padding-left: 1vw;
+    outline: 1px rgb(0, 0, 0) solid;
 }
 
 input:focus {
-    outline: none !important;
-    border: 2px solid rgb(0, 183, 255);
+    outline: 3px solid var(--green);
 }
 
-
-/* :not(:focus):valid or invalid does effect after leaving focus*/
-input:not(:focus):valid {
-    border: rgb(4, 228, 4) 1px solid;
-    background-color: rgba(207, 253, 207, 0.705);
-}
-
-input:not(:focus):invalid {
-    outline: red 1px solid;
-    background-color: rgba(255, 180, 180, 0.315);
-}
-
-
-
-.btn {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #3F5F75ff;
-    color: white;
+button.submit {
     font-size: 1.2rem;
-    font-weight: 300;
-    width: 150px;
+    padding: 10px;
+    color: black;
+    font-weight: 900;
+    border: none;
+    width: 100px;
+    background-color: var(--green);
 }
 
+button.submit:hover {
+    cursor: pointer;
+}
+.twocol {
+    display: block;
+}
+
+@media only screen and (min-width: 900px) {
+    .heading {
+        padding: 4rem;
+
+    }
+
+    .font.h1{
+        font-size: 4rem;
+    }
+
+    .font.h2 {
+        font-size: 2rem;
+    }
+
+    label {
+        font-size: 1.5rem
+    }
+
+    input {
+        height: 2em;
+        width: 600px;
+    }
+    
+
+}
