fix button for gh pages

--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ input:focus {
     outline: 3px solid var(--green);
 }
 
-button.submit {
+div.submit {
+    text-align: center;
     font-size: 1.2rem;
     padding: 10px;
     color: black;
@@ -106,7 +107,7 @@ button.submit {
     background-color: var(--green);
 }
 
-button.submit:hover {
+div.submit:hover {
     cursor: pointer;
 }
 .twocol {
